--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="main">
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-7" id="left">
                         <h3>COMPETÊNCIA E COMPROMETIMENTO</h3>
-                        <p>Seu celular está com problemas? Nós consertamos qualquer celular. Tire suas dúvidas e faça um orçamento conosco:<br /> é rápido, fácil e seguro.</p>
+                        <p>Seu celular está com problemas? Nós consertamos qualquer celular. Tire suas dúvidas e faça um orçamento conosco,<br /> é rápido, fácil e seguro.</p>
                         <a href="https://wa.me/5511939024193?text=Você está a um clique de entrar em contato com a melhor assistência técnica da região." target="_blank">
                             <button class="btn btn-success">
                                 <i class="fa-brands fa-whatsapp"></i> Faça o orçamento
