--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-7" id="left">
                         <h3>COMPETÊNCIA E COMPROMETIMENTO</h3>
                         <p>Seu celular está com problemas? Nós consertamos qualquer celular. Tire suas dúvidas e faça um orçamento conosco,<br /> é rápido, fácil e seguro.</p>
-                        <a href="https://wa.me/5511939024193?text=Você está a um clique de entrar em contato com a melhor assistência técnica da região." target="_blank">
+                        <a href="https://wa.me/5511939024193" target="_blank">
                             <button class="btn btn-success">
                                 <i class="fa-brands fa-whatsapp"></i> Faça o orçamento
                             </button>
@@ -108,7 +108,7 @@
                 <div class="col-xs-12 col-md-12 col-lg-12" id="contact">
                     <h1>Redes Sociais</h1>
                     <div id="content-contact">
-                        <a href="https://wa.me/5511939024193?text=Você está a um clique de entrar em contato com a melhor assistência técnica da região." target="_blank">
+                        <a href="https://wa.me/5511939024193" target="_blank">
                             <i class="fa-brands fa-whatsapp"></i>
                         </a>
                         <a href="https://instagram.com/imperioccel?igshid=YmMyMTA2M2Y=" target="_blank">
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <!-- whatsapp flutuante -->
-            <a href="https://wa.me/5511939024193?text=Você está a um clique de entrar em contato com a melhor assistência técnica da região." id="whatsapp-icon" target="_blank">
+            <a href="https://wa.me/5511939024193" target="_blank">
                 <i style="margin-top:16px" class="fa fa-whatsapp"></i>
             </a>
         </div>
