--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <!-- whatsapp flutuante -->
-            <a href="https://wa.me/5511939024193" target="_blank">
+            <a href="https://wa.me/5511939024193?text=Você está a um clique de entrar em contato com a melhor assistência técnica da região." id="whatsapp-icon" target="_blank">
                 <i style="margin-top:16px" class="fa fa-whatsapp"></i>
             </a>
         </div>
