novas alterações no main

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
                             </button>
                         </a>
                     </div>
-                    <div class="col-xs-12 col-sm-6 col-md-5 col-lg-5 d-none d-md-block" id="right">
-                        <img src="./src/img/banner-phone-content.png" id="mobile"/>
+                    <div class="col-xs-12 col-sm-6 col-md-5 col-lg-5 d-md-block" id="right">
+                        <!--<img src="./src/img/banner-phone-content.png" id="mobile"/>-->
+                        <img src="./src/img/from-whatsapp1.jpeg" id="mobile"/> 
                     </div>
                 </div>
             </div>
