--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
     <head>
         <title> ImperioCCel | Assistência Técnica de celulares </title>
         <meta charset="utf-8" />
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-0EGDLC19RC"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-0EGDLC19RC');
+        </script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- CSS --> 
         <link href="./src/css/styles.css" rel="stylesheet" />  
