inserção do favicon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title> ImperioCCel | Assistência Técnica de celulares </title>
         <meta charset="utf-8" />
+        <link rel="icon" type="image/x-icon" href="./src/img/favicon.png">
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-0EGDLC19RC"></script>
         <script>
